--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -21,30 +21,52 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/chipbeforeyesterday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/before_yesterday" />
+
+            <com.google.android.material.chip.Chip
                 android:id="@+id/chipyesterday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="yesterday" />
+                android:text="@string/yesterday" />
 
             <com.google.android.material.chip.Chip
+                android:id="@+id/chiptoday"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="today" />
-
-            <com.google.android.material.chip.Chip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="tomorrow" />
-
+                android:text="@string/today" />
 
         </com.google.android.material.chip.ChipGroup>
+        
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/inputLayout"
+            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:counterEnabled="true"
+            app:counterMaxLength="20"
+            app:helperText="wiki_helper_text"
+            android:hint="@string/hint"
+            app:endIconMode="custom"
+            app:endIconDrawable="@drawable/ic_wikipedia"
+            android:padding="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"  >
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.geekbrain.android.nasa_api.utils.MyImageView
             android:id="@+id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/nasapictureoftheday"
-            app:layout_constraintTop_toBottomOf="@+id/chipGroup"
+            app:layout_constraintTop_toBottomOf="@+id/inputLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
