Home_task_2 добавили BottomAppBar вместо стандартного

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="color_gray">#668E8A8A</color>
+    <color name="my_color">#2E468E</color>
 </resources>
