--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,29 @@
     <style name="Base.Theme.Nasa_api" parent="Theme.Material3.DynamicColors.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="myColor">#2E468E</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
+        <item name="myColor">@color/my_color</item>
         <item name="chipStyle">@style/MyChipStyle</item>
         <item name="textInputStyle">@style/MyTextInputStyle</item>
 
         <item name="textAppearanceBody2">@style/MyTextAppearanceBody2</item>
-       <!-- <item name="textAppearanceLabelLarge">@style/MyTextAppearanceBody2</item>-->
+        <item name="shapeAppearanceSmallComponent">@style/MyShapeAppearanceSmallComponent</item>
+        <item name="bottomAppBarStyle">@style/MyAppBarStyle</item>
+        <!-- <item name="textAppearanceLabelLarge">@style/MyTextAppearanceBody2</item>-->
+
+    </style>
+
+    <style name="MyAppBarStyle" parent="@style/Widget.Material3.BottomAppBar">
+        <item name="backgroundTint">@color/my_color</item>
+        <item name="navigationIconTint">@color/white</item>
+    </style>
+
+    <style name="MyShapeAppearanceSmallComponent" parent="ShapeAppearance.Material3.SmallComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
 
     </style>
 
@@ -21,9 +38,11 @@
         <item name="android:letterSpacing">0.11785</item>
     </style>
 
-    <style name="MyFirstTheme" parent="Base.Theme.Nasa_api"/>
-    <style name="MySecondTheme" parent="Base.Theme.Nasa_api"/>
-    <style name="MyThirdTheme" parent="Base.Theme.Nasa_api"/>
+    <style name="MyFirstTheme" parent="Base.Theme.Nasa_api" />
+
+    <style name="MySecondTheme" parent="Base.Theme.Nasa_api" />
+
+    <style name="MyThirdTheme" parent="Base.Theme.Nasa_api" />
 
     <style name="RedTheme" parent="MyFirstTheme">
         <item name="myColor">#FF0101</item>
@@ -38,9 +57,10 @@
     </style>
 
     <style name="MyChipStyle" parent="Widget.Material3.Chip.Suggestion">
-        <item name="chipBackgroundColor">@drawable/my_selector_background_chip</item>
+        <!--    <item name="chipBackgroundColor">@drawable/my_selector_background_chip</item>-->
         <item name="rippleColor">#7C1293</item>
-        <item name="android:textAppearance">@style/MyTextAppearanceBody2</item>
+        <!-- <item name="android:textAppearance">@style/MyTextAppearanceBody2</item>-->
+        <item name="shapeAppearance">@style/MyShapeAppearanceSmallComponent</item>
     </style>
 
     <style name="MyTextInputStyle" parent="Widget.Material3.TextInputLayout.OutlinedBox">
