--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="none">
         <item
-            android:id="@+id/navigation_one"
+            android:id="@+id/action_theme_moon"
             android:icon="@drawable/ic_archive"
-            android:title="На экран 1" />
+            android:title="@string/moon_theme" />
         <item
-            android:id="@+id/navigation_two"
+            android:id="@+id/action_theme_mars"
             android:icon="@drawable/ic_send"
-            android:title="На экран 2" />
+            android:title="@string/mars_theme" />
     </group>
 </menu>
