--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,14 +4,13 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
-
-
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
 
         <item name="myColor">@color/my_color</item>
         <item name="myColor2">#FF0101</item>
+
         <item name="chipStyle">@style/MyChipStyle</item>
         <item name="textInputStyle">@style/MyTextInputStyle</item>
 
@@ -21,6 +20,64 @@
         <item name="tabStyle">@style/MyTabLayoutStyle</item>
         <!-- <item name="textAppearanceLabelLarge">@style/MyTextAppearanceBody2</item>-->
 
+    </style>
+
+    <style name="MarsTheme" parent="Base.Theme.Nasa_api">
+        <item name="colorPrimary">@color/mars_theme_light_primary</item>
+        <item name="colorOnPrimary">@color/mars_theme_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/mars_theme_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/mars_theme_light_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/mars_theme_light_secondary</item>
+        <item name="colorOnSecondary">@color/mars_theme_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/mars_theme_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/mars_theme_light_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/mars_theme_light_tertiary</item>
+        <item name="colorOnTertiary">@color/mars_theme_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/mars_theme_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/mars_theme_light_onTertiaryContainer</item>
+        <item name="colorError">@color/mars_theme_light_error</item>
+        <item name="colorErrorContainer">@color/mars_theme_light_errorContainer</item>
+        <item name="colorOnError">@color/mars_theme_light_onError</item>
+        <item name="colorOnErrorContainer">@color/mars_theme_light_onErrorContainer</item>
+        <item name="android:colorBackground">@color/mars_theme_light_background</item>
+        <item name="colorOnBackground">@color/mars_theme_light_onBackground</item>
+        <item name="colorSurface">@color/mars_theme_light_surface</item>
+        <item name="colorOnSurface">@color/mars_theme_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/mars_theme_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/mars_theme_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/mars_theme_light_outline</item>
+        <item name="colorOnSurfaceInverse">@color/mars_theme_light_inverseOnSurface</item>
+        <item name="colorSurfaceInverse">@color/mars_theme_light_inverseSurface</item>
+        <item name="colorPrimaryInverse">@color/mars_theme_light_inversePrimary</item>
+    </style>
+
+    <style name="MoonTheme" parent="Base.Theme.Nasa_api">
+        <item name="colorPrimary">@color/moon_theme_light_primary</item>
+        <item name="colorOnPrimary">@color/moon_theme_light_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/moon_theme_light_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/moon_theme_light_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/moon_theme_light_secondary</item>
+        <item name="colorOnSecondary">@color/moon_theme_light_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/moon_theme_light_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/moon_theme_light_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/moon_theme_light_tertiary</item>
+        <item name="colorOnTertiary">@color/moon_theme_light_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/moon_theme_light_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/moon_theme_light_onTertiaryContainer</item>
+        <item name="colorError">@color/moon_theme_light_error</item>
+        <item name="colorErrorContainer">@color/moon_theme_light_errorContainer</item>
+        <item name="colorOnError">@color/moon_theme_light_onError</item>
+        <item name="colorOnErrorContainer">@color/moon_theme_light_onErrorContainer</item>
+        <item name="android:colorBackground">@color/moon_theme_light_background</item>
+        <item name="colorOnBackground">@color/moon_theme_light_onBackground</item>
+        <item name="colorSurface">@color/moon_theme_light_surface</item>
+        <item name="colorOnSurface">@color/moon_theme_light_onSurface</item>
+        <item name="colorSurfaceVariant">@color/moon_theme_light_surfaceVariant</item>
+        <item name="colorOnSurfaceVariant">@color/moon_theme_light_onSurfaceVariant</item>
+        <item name="colorOutline">@color/moon_theme_light_outline</item>
+        <item name="colorOnSurfaceInverse">@color/moon_theme_light_inverseOnSurface</item>
+        <item name="colorSurfaceInverse">@color/moon_theme_light_inverseSurface</item>
+        <item name="colorPrimaryInverse">@color/moon_theme_light_inversePrimary</item>
     </style>
 
     <style name="MyTabLayoutStyle" parent="@style/Widget.Material3.TabLayout">
