--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,6 +23,7 @@
     </style>
 
     <style name="MarsTheme" parent="Base.Theme.Nasa_api">
+        <item name="textAppearanceLabelLarge">@style/MyTextAppearanceBody2</item>
         <item name="colorPrimary">@color/mars_theme_light_primary</item>
         <item name="colorOnPrimary">@color/mars_theme_light_onPrimary</item>
         <item name="colorPrimaryContainer">@color/mars_theme_light_primaryContainer</item>
