--- a/app/src/main/res/layout/fragment_mars.xml
+++ b/app/src/main/res/layout/fragment_mars.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    android:tag="Mars">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|bottom"
+        android:visibility="gone"
         android:layout_marginBottom="20dp"
         android:orientation="horizontal"
         >
