Home_task_4 ButtonBehavior.kt

--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -13,4 +13,9 @@
         android:icon="@drawable/ic_system"
         android:title="@string/epic" />
 
+    <item
+        android:id="@+id/action_layout"
+        android:icon="@drawable/ic_system"
+        android:title = "@string/layout" />
+
 </menu>
