Home_task_4 MotionFragment.kt

--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -18,4 +18,9 @@
         android:icon="@drawable/ic_system"
         android:title = "@string/layout" />
 
+    <item
+        android:id="@+id/action_motion"
+        android:icon="@drawable/ic_system"
+        android:title = "@string/layout" />
+
 </menu>
