Home_task_5 TransitionSet

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="padding_5dp">5dp</dimen>
     <dimen name="app_bar_height">300dp</dimen>
     <dimen name="appMargin">10dp</dimen>
+    <dimen name="animation_margin">16dp</dimen>
 </resources>
