--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -21,6 +21,6 @@
     <item
         android:id="@+id/action_motion"
         android:icon="@drawable/ic_system"
-        android:title = "@string/layout" />
+        android:title = "@string/motion" />
 
 </menu>
