Home_task_5 StateListAnimator

--- a/app/src/main/res/layout/fragment_coordinator.xml
+++ b/app/src/main/res/layout/fragment_coordinator.xml
@@ -19,10 +19,10 @@
             app:contentScrim="?attr/colorPrimary"
             android:background="@color/moon_seed"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
+            app:toolbarId="@+id/header">
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/header"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin"
