Home_task_7 Done

--- a/app/src/main/res/layout/fragment_picture_of_the_day.xml
+++ b/app/src/main/res/layout/fragment_picture_of_the_day.xml
@@ -11,7 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+
         tools:context=".view.PictureOfTheDayFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -68,6 +68,7 @@
                     android:id="@+id/input"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/aclonica"
                     android:hint="@string/wiki_search"
                     android:minHeight="48dp" />
 
