--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -13,7 +13,7 @@
         android:icon="@drawable/ic_system"
         android:title="@string/epic" />
 
-    <item
+<!--    <item
         android:id="@+id/action_layout"
         android:icon="@drawable/ic_baseline_animation_24"
         android:title = "@string/animation" />
@@ -21,6 +21,6 @@
     <item
         android:id="@+id/action_motion"
         android:icon="@drawable/ic_baseline_auto_awesome_motion_24"
-        android:title = "@string/motion" />
+        android:title = "@string/motion" />-->
 
 </menu>
